# postgres-ai-copilot

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: routes.py
app/llm/: client.py  prompts.py
app/parsers/: explain_json_parser.py  explain_text_parser.py
app/schemas/: ai_summary.py  database_metadata.py  input.py  output.py  plan.py
app/services/: ai_explanation.py  analyze_query.py  metadata_inference.py  postgres_client.py  predicate_extraction.py
app/ui/: streamlit_app.py
postgres_ai_copilot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_advisor_schema.py  test_ai_prompt_builders.py  test_connected_analysis.py  test_heuristics.py  test_parsers.py  test_predicate_extraction.py
tests/fixtures/cases/: slow_seq_scan_case.json
tests/fixtures/plans/: slow_seq_scan_plan.json
