[project]
name = "postgres-ai-copilot"
version = "0.1.0"
description = "AI-assisted PostgreSQL query plan analysis and tuning recommendations"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Terry Watts" }
]
dependencies = [
  "fastapi>=0.130,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "streamlit>=1.40,<2.0",
  "sqlglot>=25.0,<26.0",
  "psycopg[binary]>=3.2,<4.0",
  "httpx>=0.27,<1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "ruff>=0.6,<1.0",
  "mypy>=1.11,<2.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false